# desynt

./: .mise.toml  .rustfmt.toml  CHANGELOG.md  CHAT_LOG.md  Cargo.toml  LICENSE-Apache-2.0.txt  README.md
.github/workflows/: ci.yml
examples/: const_example.rs  domain_specific.rs  generic_demo.rs
src/: definitions.rs  lib.rs
tests/: const_resolver.rs  derive.rs  empty_storage.rs  equal_treatment.rs  generic_types.rs  ident.rs  path.rs  phf_storage.rs  primitives.rs  progressive_resolution.rs  resolution.rs  resolver.rs  specific_case.rs  static_resolver.rs  type_alias.rs  utils.rs
