[package]
name = "desynt"
description = "Convert syn paths & idents to normalised names"
repository = "https://github.com/jayvdb/desynt"
license = "MIT OR Apache-2.0"
version = "0.2.0"
edition = "2021"
rust-version = "1.75"

[dependencies]
syn = { version = "2.0", features = ["full"] }
phf = { version = "0.13", optional = true }

[dev-dependencies]
phf = { version = "0.13", features = ["macros"] }
rstest = "0.18"

[features]
default = ["static-resolver"]
static-resolver = ["phf"]

[[test]]
name = "phf_storage"
required-features = ["static-resolver"]

[[example]]
name = "const_example"
required-features = ["static-resolver"]

[[example]]
name = "domain_specific"
required-features = ["static-resolver"]
